--- a/CSS/login.css
+++ b/CSS/login.css
@@ -1,20 +1,23 @@
 body{
-    background-color: #24b4c4;
+    background-color: #263859;
         
 }
-header{
-    justify-content: center;
-    padding-right: 500px;
-    margin-left: 40%;
+header {
+   
+    justify-content: center; /* Centers content horizontally */
+    align-items: center;     /* Centers content vertically */
+    height: 50vh;           /* Make sure the header takes up the full height of the viewport */
+    text-align: center;      /* Ensures text inside header is centered */
 }
-#danger{
-    width: 45%;
-    padding-left: 8%;
+
+#danger {
+    width: 20%;
 }
-#title{
+
+#title {
     font-size: 60px;
     margin: 0;
-   
+    color: white;
 }
 .SUN {
     display: flex;
@@ -35,7 +38,7 @@ header{
     border: 5px solid black;
     border-radius: 8px;
     outline: none;
-    background-color: #24b4c4;
+    background-color: #f0f0f0;
     box-sizing: border-box;
 }
 
@@ -47,19 +50,20 @@ header{
     pointer-events: none; /* Biar gak bisa diklik */
 }
 .fake-input input:focus {
-    border-color: #0a3d62;
-    box-shadow: 0 0 8px rgba(10, 61, 98, 0.5);
+    border-color: #0d0d0d;
+    box-shadow: 0 0 8px rgba(49, 96, 130, 0.5);
     background-color: #dff6fa;
 }
 #B{
-    width: 20%;
+    width: 30%;
     height: 5em;
-   margin: 40%;
-    background-color: aqua;
+   margin: 35%;
+    background-color: rgb(255, 255, 255);
     margin-top: 20px;
     border: none;
     border-radius: 10px;
+    
 }
 #B:hover{
-    background-color: aquamarine;
+    background-color: rgb(101, 106, 107);
 }
