--- a/CSS/login.css
+++ b/CSS/login.css
@@ -1,13 +1,15 @@
-body{
+
+body {
     background-color: #263859;
-        
 }
+
 header {
-   
-    justify-content: center; /* Centers content horizontally */
-    align-items: center;     /* Centers content vertically */
-    height: 50vh;           /* Make sure the header takes up the full height of the viewport */
-    text-align: center;      /* Ensures text inside header is centered */
+    display: flex;
+    flex-direction: column;
+    justify-content: center; 
+    align-items: center;     
+    height: 50vh;            
+    text-align: center;     
 }
 
 #danger {
@@ -19,21 +21,22 @@ header {
     margin: 0;
     color: white;
 }
+
 .SUN {
     display: flex;
-    justify-content: center; /* Tengah secara horizontal */
-    align-items: center;     /* Tengah secara vertikal */
-    height: 20vh;           
+    justify-content: center; 
+    align-items: center;     
+    height: 20vh;
 }
 
-.fake-input { 
+.fake-input {
     position: relative;
     width: 1000px;
 }
 
-.fake-input input { 
+.fake-input input {
     width: 100%;
-    padding: 50px 75px 50px 50px;  /* Padding kanan 45px biar gak tabrakan sama icon */
+    padding: 50px 75px 50px 50px; 
     font-size: 50px;
     border: 5px solid black;
     border-radius: 8px;
@@ -47,23 +50,117 @@ header {
     top: 50%;
     right: 15px;
     transform: translateY(-50%);
-    pointer-events: none; /* Biar gak bisa diklik */
+    pointer-events: none; 
 }
+
 .fake-input input:focus {
     border-color: #0d0d0d;
     box-shadow: 0 0 8px rgba(49, 96, 130, 0.5);
     background-color: #dff6fa;
 }
-#B{
+
+#B {
     width: 30%;
     height: 5em;
-   margin: 35%;
+    margin: 35%;
     background-color: rgb(255, 255, 255);
     margin-top: 20px;
     border: none;
     border-radius: 10px;
-    
 }
-#B:hover{
+
+#B:hover {
     background-color: rgb(101, 106, 107);
+}
+
+#SU {
+    padding-left: 70%;
+}
+a {
+    color: rgb(255, 254, 254); 
+    text-decoration: none; 
+}
+
+a:hover {
+    color: darkgray; 
+}
+
+/* Media Queries for Mobile and Tablet Devices */
+
+/* Mobile (up to 600px) */
+@media only screen and (max-width: 600px) {
+    header {
+        height: 30vh;
+    }
+
+    #title {
+        font-size: 40px;
+    }
+
+    .SUN {
+        flex-direction: column;
+        height: auto;
+    }
+
+    .fake-input {
+        width: 90%;
+    }
+
+    .fake-input input {
+        font-size: 30px;
+        padding: 15px 30px;
+    }
+
+    .fake-input img {
+        width: 40px;
+        height: 40px;
+    }
+
+    #B {
+        width: 80%;
+        margin: 10%;
+        font-size: 18px;
+    }
+
+    #SU {
+        padding-left: 20%;
+    }
+
+    #danger {
+        width: 30%;
+    }
+}
+
+/* Tablet (600px - 1024px) */
+@media only screen and (min-width: 600px) and (max-width: 1024px) {
+    header {
+        height: 40vh;
+    }
+
+    #title {
+        font-size: 50px;
+    }
+
+    .fake-input {
+        width: 80%;
+    }
+
+    .fake-input input {
+        font-size: 40px;
+        padding: 20px 40px;
+    }
+
+    #B {
+        width: 60%;
+        margin: 20%;
+        font-size: 20px;
+    }
+
+    #SU {
+        padding-left: 30%;
+    }
+
+    #danger {
+        width: 25%;
+    }
 }
