--- a/CSS/Newkakunin.css
+++ b/CSS/Newkakunin.css
@@ -1,9 +1,89 @@
+
 main {
     height: 50vh; 
     display: flex;
     justify-content: center; 
     align-items: center;     
 }
+/* Sidebar Styles */
+ul {
+    border: 1px solid black;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    background-color: rgb(217, 214, 214);
+    height: 100vh;
+    position: fixed;
+    overflow: auto;
+  }
+  
+  li {
+    border-bottom: 1px solid black;
+    font-size: 30px;
+    text-align: left;
+  }
+  
+  li a {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    text-decoration: none;
+    color: black;
+  }
+  
+  li a:hover {
+    background-color: azure;
+    color: brown;
+  }
+  
+  li img {
+    margin-right: 10px;
+  }
+  
+  /* Content Area (beside sidebar) */
+  .table-responsive {
+    margin-left: 220px; /* space for sidebar */
+    max-width: 100%;
+    background-color: rgb(57, 104, 145);
+    padding: 15px;
+    overflow-x: auto;
+    border-radius: 4px;
+    border: 1px solid black;
+  }
+  
+  /* Table Styling */
+  .table {
+    width: 1650px;
+    font-size: 14px;
+    color: #444;
+    border-collapse: collapse;
+    white-space: nowrap;
+    background-color: white;
+  }
+  
+  .table thead {
+    background-color: rgb(76, 164, 49);
+    color: black;
+  }
+  
+  .table th,
+  .table td {
+    border: 1px solid rgb(31, 31, 110);
+    padding: 8px;
+    text-align: center;
+    font-size: 24px;
+  }
+  #L img {
+    margin: 0;
+    padding: 0;
+  }
+  
+  #USER {
+    text-decoration: none; 
+    margin: 0;
+    padding: 0;
+  }
 
 
 .NE{
